# esp32s3-web

./: README.md
esp32/: .gitignore  CMakeLists.txt  env_init.bat  partitions.csv  sdkconfig
esp32/components/base64/: CMakeLists.txt
esp32/main/: CMakeLists.txt  main.c
esp32/main/http_server/: http_auth.c  http_auth.h  http_server.c  http_server.h  http_uri_index.c  http_uri_index.h  http_uri_system.c  http_uri_system.h
esp32/main/mod/: mod_cmd.c  mod_cmd.h  mod_fs.c  mod_fs.h  mod_network.c  mod_network.h  mod_nvs.c  mod_nvs.h
web/: package-lock.json
web/src/: App.vue
web/src/components/: Login.vue
web/src/utils/: axios.ts
